Change petAnimal model

--- a/src/PetApplication/PetApplication.csproj
+++ b/src/PetApplication/PetApplication.csproj
@@ -267,8 +267,10 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IEntity.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Pet.cs" />
+    <Compile Include="Models\PetAnimal.cs" />
     <Compile Include="Models\PetPost.cs" />
     <Compile Include="Models\PetType.cs" />
     <Compile Include="Models\PostReport.cs" />
