--- a/src/PetApplication/PetApplication.csproj
+++ b/src/PetApplication/PetApplication.csproj
@@ -266,6 +266,10 @@
     <Compile Include="Migrations\201903200926328_AddReport.Designer.cs">
       <DependentUpon>201903200926328_AddReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904051339505_CreatePetAnimalDbSet.cs" />
+    <Compile Include="Migrations\201904051339505_CreatePetAnimalDbSet.Designer.cs">
+      <DependentUpon>201904051339505_CreatePetAnimalDbSet.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -639,6 +643,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903200926328_AddReport.resx">
       <DependentUpon>201903200926328_AddReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904051339505_CreatePetAnimalDbSet.resx">
+      <DependentUpon>201904051339505_CreatePetAnimalDbSet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\PetApplication.Migrations.AddDisplayName.resources" />
     <EmbeddedResource Include="obj\Debug\PetApplication.Migrations.AddDisplayNameForAllModel.resources" />
