--- a/src/PetApplication/PetApplication.csproj
+++ b/src/PetApplication/PetApplication.csproj
@@ -635,6 +635,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\PetAnimals\Details - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
