Change CSS and email option

--- a/src/PetApplication/Web.config
+++ b/src/PetApplication/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <add key="Email" value="solaiman.shohag@bubt.edu.bd" />
+  <add key="Password" value="s#01751114178" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
