Change email and post create optaion

--- a/src/PetApplication/Web.config
+++ b/src/PetApplication/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=aspnet-PetApplication;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=UB71104PC\SHOHAG;Initial Catalog=PetBazar;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
