--- a/src/PetApplication/Web.config
+++ b/src/PetApplication/Web.config
@@ -17,12 +17,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="Email" value="petbazar.com@gmail.com" />
-  <add key="Password" value="*******" />
+  <add key="Password" value="*********" />
   </appSettings>
   <system.net>
     <mailSettings>
       <smtp from="petbazar.com@gmail.com">
-        <network host="smtp.gmail.com" password="********" port="587" userName="petbazar.com@gmail.com"  enableSsl="true"/>
+        <network host="smtp.gmail.com" password="*********" port="587" userName="petbazar.com@gmail.com"  enableSsl="true"/>
       </smtp>
     </mailSettings>
   </system.net>
